9장 실습문제

--- a/Ch9/9-2.html
+++ b/Ch9/9-2.html
@@ -30,9 +30,9 @@
         <input type="radio" name="fruit" value="mango" onclick="handleRadio(event)">망고
         <input type="radio" name="fruit" value="apple" onclick="handleRadio(event)">사과 -->
         <form action="" id="parent">
-            <input type="radio" name="fruit" value="./banana.png" onclick="handleRadio(this)">바나나
-            <input type="radio" name="fruit" value="./mango.webp" onclick="handleRadio(this)">망고
-            <input type="radio" name="fruit" value="./apple.jpg" onclick="handleRadio(this)">사과    
+            <input type="radio" name="fruit" value="images/banana.png" onclick="handleRadio(this)">바나나
+            <input type="radio" name="fruit" value="images/mango.webp" onclick="handleRadio(this)">망고
+            <input type="radio" name="fruit" value="images/apple.jpg" onclick="handleRadio(this)">사과    
         </form>
         <br>
         <img id="img" src="" alt="과일 이미지" style="width: 200px; height: 200px;">
